# LLM-Reinforcement-GAN

./: .gitignore  Makefile  README.md  Readme.md  pyproject.toml
experiments/_debug/: dataset.test.parquet  dataset.train.parquet  evaluation.ipynb  experiment.py  predictions.after.csv  predictions.before.csv  train.tracking.csv
experiments/_debug/results/: predictions.before.csv  train.tracking.csv
experiments/twon/: experiment.py  experiment_left.py  experiment_prelim.py
experiments/twon/data/: left.test.parquet  left.train.parquet  prelim.train.parquet  right.test.parquet  right.train.parquet
experiments/twon/results/: predictions.after.csv  predictions.before.csv  train.tracking.csv  train.tracking.json
src/llm_reinforcement_gan/: __init__.py  dataset.py
src/llm_reinforcement_gan/neural/: __init__.py  discriminator.py  generator.py  loss.py  util.py
src/llm_reinforcement_gan/pipeline/: __init__.py  evaluate.py  tracker.py  util.py
tests/: conftest.py  test_dataset.py  test_discriminator.py  test_generator.py  test_pipeline.py
tests/_outputs/: eval.after.corr.csv  eval.after.mae.csv  eval.after.predictions.csv  eval.before.corr.csv  eval.before.mae.csv  eval.before.predictions.csv  predictions.after.csv  predictions.before.csv  train.tracking.csv  train.tracking.json
