[tool.poetry]
name = "llm_reinforcement_gan"
version = "0.1.0"
description = ""
authors = ["Simon Münker <muenker@uni-trier.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.1"
pyarrow = "^17.0.0"
rich = "^13.8.1"
pandas = "^2.2.2"
torch = "^2.4.1"
transformers = "^4.44.2"
accelerate = "^0.34.2"
peft = "^0.12.0"
cltrier-lib = "^0.1.5"
datasets = "^3.0.0"

[tool.poetry.group.eval.dependencies]
notebook = "^7.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest = "^8.3.3"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240909"

[tool.ruff]
line-length = 96

[tool.ruff.lint]
select = ["I", "N", "UP", "A", "PL"]

[tool.mypy]
files = ["src/llm_reinforcement_gan/", "tests/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
